
-Secured / optimized the Access Stats feature (in Admin Area => System Monitoring), to run from /cache/secured/, and run faster

-Added "Referrer" data for Access Stats (shows what page the visit initiated from, if available)

-Accurate coingecko currency support (currency list is now retrieved from their API)

-Secured 'address-balance-tracker' plugin's cache data, to run from /cache/secured/

-Added BUNDLED Access Stats (PER IP ADDRESS stats are also still available)

-Significant user experience improvements / runtime optimizations

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.05

-BUG FIX: Fixed occasional blanked out screen in user area, due to lack of data set checks, before data parsing within coingecko's available currencies list

-BUG FIX: Miscellaneous (minor)

-User experience improvements / runtime optimizations

-Optimized / refactored API throttling system

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.06

-BUG FIX: Fixed error "No...data received...file /cache/secured/a*********s/ip_XX*********X.dat (aborting...)", originating in prune_access_stats() (called during scheduled maintenance), which occurred when no stats remained AFTER PRUNING any outdated access stats (the stats file is properly deleted now). You can safely ignore past error logging that looks like this. Sorry!

-BUG FIX: Fixed edge-cases where updating the CACHED application configuration could FAIL (any updates now initiate a 1 second pause AFTER, so any file locks release, in case a second update needs to happen during the same runtime)

-BUG FIX: Miscellaneous (minor)

-Safety checks for importing config backups (with version states saved to default / cached configs)

-Minor user experience improvements

-------------------------------------------------------------------






